--- a/asa/intex.html
+++ b/asa/intex.html
@@ -13,7 +13,7 @@
         <form [formGroup]="formulario" method="post" (ngSubmit)="botonEnviar()">
             <div class="form-group">
             <div class="col-md-12 text-center"> 
-                xvcxgdsxg
+                xvcxgd
                 
         <br><label for="Nombre">Nombre:</label>
                 <input type="text" placeholder="Ingresa tu nombre" id="Nombre" name="Nombre" formControlName="Nombre" Validators.required>
